Update and rename Experiments/Classification/Classification.ipynb to experiments/classification.ipynb

--- a/experiments/classification.ipynb
+++ b/experiments/classification.ipynb
@@ -22,7 +22,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "from graph_gaussian_process.graph_gaussian_process_model_classification import GraphGPC\n",
+    "from graph_gaussian_process.classification import GraphGPC\n",
     "\n",
     "dtype=tf.float64\n",
     "\n",
