Update and rename Experiments/Regression/Regression.ipynb to experiments/regression.ipynb

--- a/experiments/regression.ipynb
+++ b/experiments/regression.ipynb
@@ -31,7 +31,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "from graph_gaussian_process.graph_gaussian_process_model_regression import GraphGPR\n",
+    "from graph_gaussian_process.regression import GraphGPR\n",
     "\n",
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
